--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <section id="WELCOME">
         <div class="line">
-            <img src="https://www.incimages.com/uploaded_files/image/1920x1080/getty_485008244_105123.jpg" class="image">
+            <img hight="400" width="400 src="https://www.incimages.com/uploaded_files/image/1920x1080/getty_485008244_105123.jpg" class="image">
             <h1> My favorite hobby is coding</h1>
             <p> Coding is my favorite hobby because it is very fun but it gets tiring but when you finish you feel a great accomplishment but yet still it is hard but fun and to have the best work you have to be foucsed and brave and try new things. Just like Albert Einstein said <br /> <br />
                 "Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.
